pathmod_derive/tests/ui/enum_unit.stderr
error: #[derive(EnumAccess)] does not support unit variants in this MVP
 --> tests/ui/enum_unit.rs:3:10
  |
3 | #[derive(EnumAccess)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EnumAccess` (in Nightly builds, run with -Z macro-backtrace for more info)
