pathmod_derive/tests/ui/enum_unit.rs
use pathmod::prelude::*;

#[derive(EnumAccess)]
enum E { A }

fn main() {}
